--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,14 +2,14 @@
 <html data-ng-app="tripPlanner" data-ng-controller="TripPlannerCtrl">
     <head>
         <title>TripPlanner</title>
-        <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <!--<link href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>-->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">    
         <link href="css/custom.css" rel="stylesheet" type="text/css"/>
-        <script src="bower_components/es6-shim/es6-shim.min.js" type="text/javascript"></script>
+        <script src="libs/es6-shim/es6-shim.min.js" type="text/javascript"></script>
 
-        <link href="bower_components/animate.css/animate.min.css" rel="stylesheet" type="text/css"/>
+        <link href="libs/animate.css/animate.min.css" rel="stylesheet" type="text/css"/>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCe0QpfAbn-6iO3ZlLM_nzaYaFH31uisXs&sensor=false&libraries=places">
         </script>
         <!-- Just for debugging purposes. Don't actually copy this line! -->
@@ -50,11 +50,11 @@
         <!-- Bootstrap core JavaScript
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="bower_components/angular/angular.js" type="text/javascript"></script>
-        <script src="bower_components/angular-route/angular-route.js" type="text/javascript"></script>
-        <script src="bower_components/angular-animate/angular-animate.min.js" type="text/javascript"></script>
-        <script src="bower_components/angular-ui-bootstrap-bower/ui-bootstrap.min.js" type="text/javascript"></script>
-        <script src="bower_components/angular-ui-bootstrap-bower/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
+        <script src="libs/angular/angular.js" type="text/javascript"></script>
+        <script src="libs/angular-route/angular-route.js" type="text/javascript"></script>
+        <script src="libs/angular-animate/angular-animate.min.js" type="text/javascript"></script>
+        <script src="libs/angular-ui-bootstrap-bower/ui-bootstrap.min.js" type="text/javascript"></script>
+        <script src="libs/angular-ui-bootstrap-bower/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
         
         
         <script src="js/utils.js" type="text/javascript"></script>
