--- a/client/src/index.html
+++ b/client/src/index.html
@@ -31,12 +31,9 @@
     <body>
         <div class="container">
             <div class="header">
+                <tp-login></tp-login>
                 <ul class="nav nav-pills pull-right">
-                    <li class="active"><button type="button" class="btn btn-default" >Home</button type=""></li>
-                    <li data-ng-hide="loggedIn"><button type="button" id="google_sign" class="btn btn-danger" data-ng-click="login('google')">Sign with Google</button></li>
-                    <li data-ng-show="loggedIn">
-                        <button title="Logout" data-ng-click="logout()" type="button" class="btn btn-primary">{{displayName}}</button>
-                    </li>
+                    <li class="active"><button type="button" class="btn btn-default" >Home</button></li>
                 </ul>
                 <h3 class="text-muted">TripPlanner</h3>
             </div>
@@ -93,8 +90,8 @@
 
         <!--AUTH-->
         <script src="js/auth/auth.js" type="text/javascript"></script>
+        <script src="js/auth/login.js" type="text/javascript"></script>
 
-        
         <!--CORE -->
         <script src="js/core/cache.js" type="text/javascript"></script>
         <script src="js/core/core.js" type="text/javascript"></script>
