finished server side authentication in client

--- a/server/client/index.html
+++ b/server/client/index.html
@@ -91,7 +91,7 @@
         <!--AUTH-->
         <script src="js/auth/auth.js" type="text/javascript"></script>
         <script src="js/auth/login.js" type="text/javascript"></script>
-
+        <script src="js/auth/http.js" type="text/javascript"></script>
         <!--CORE -->
         <script src="js/core/cache.js" type="text/javascript"></script>
         <script src="js/core/core.js" type="text/javascript"></script>
