--- a/server/client/redirect.html
+++ b/server/client/redirect.html
@@ -24,7 +24,11 @@ and open the template in the editor.
         <h3>Please wait...</h3>
         <progress></progress>
     </center>
-
-    <script src="libs/hello/dist/hello.all.min.js" type="text/javascript"></script>
+    <script>
+        window.setTimeout(function(){
+            window.close();
+        }, 4000);
+    </script>
+  
 </body>
 </html>
