--- a/server/client/index.html
+++ b/server/client/index.html
@@ -30,14 +30,14 @@
     </head>
     <body>
         <div class="container">
-            <div class="header">
+            <nav class="header">
                 <tp-login></tp-login>
                 <ul class="nav nav-pills pull-right">
                     <li class="active"><button type="button" class="btn btn-default" >Home</button></li>
                 </ul>
                 <h3 class="text-muted">TripPlanner</h3>
-            </div>
-
+            </nav>
+            <tp-notification></tp-notification>
             <div data-ng-view="">
 
             </div>
@@ -45,9 +45,9 @@
             <br/>
 
 
-            <div class="footer">
+            <footer class="footer">
                 <p>&copy; Company 2014</p>
-            </div>
+            </footer>
 
         </div> <!-- /container -->
 
@@ -96,7 +96,7 @@
         <script src="js/core/cache.js" type="text/javascript"></script>
         <script src="js/core/core.js" type="text/javascript"></script>
         <script src="js/core/server.js" type="text/javascript"></script>
-
+        <script src="js/core/notification.js" type="text/javascript"></script>
         <!--PLACE -->
         <script src="js/place/model.js" type="text/javascript"></script>
 
