--- a/server/client/index.html
+++ b/server/client/index.html
@@ -29,14 +29,47 @@
 
     </head>
     <body>
-        <div class="container">
-            <nav class="header">
-                <tp-login></tp-login>
-                <ul class="nav nav-pills pull-right">
-                    <li class="active"><button type="button" class="btn btn-default" >Home</button></li>
+
+        <!--            <nav class="header">
+                        <tp-login></tp-login>
+                        <ul class="nav nav-pills pull-right">
+                            <li class="active"><button type="button" class="btn btn-default" >Home</button></li>
+                        </ul>
+                        <h3 class="text-muted">TripPlanner</h3>
+                    </nav>-->
+        <nav class="navbar navbar-inverse">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="javascript:void(0)">TripPlanner</a>
+            </div>
+            <div class="navbar-collapse collapse navbar-responsive-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    
+                    <li class="dropdown">
+                        <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="javascript:void(0)">Action</a></li>
+                            <li><a href="javascript:void(0)">Another action</a></li>
+                            <li><a href="javascript:void(0)">Something else here</a></li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">Dropdown header</li>
+                            <li><a href="javascript:void(0)">Separated link</a></li>
+                            <li><a href="javascript:void(0)">One more separated link</a></li>
+                        </ul>
+                    </li>
                 </ul>
-                <h3 class="text-muted">TripPlanner</h3>
-            </nav>
+                <form class="navbar-form navbar-left">
+                    <input type="text" class="form-control col-lg-8" placeholder="Search">
+                </form>
+                <tp-login></tp-login>
+            </div>
+        </nav>
+        <div class="container">
             <tp-notification></tp-notification>
             <div data-ng-view="">
 
