--- a/server/client/js/auth/login.html
+++ b/server/client/js/auth/login.html
@@ -1,11 +1,16 @@
-<ul class="nav nav-pills pull-right">
-    <li data-ng-hide="isLoggedIn">
-        <button type="button" id="google_sign" class="btn btn-danger" data-ng-click="login('google')">Sign with Google</button>
+<ul class="nav navbar-nav navbar-right">
+    <li class="dropdown" data-ng-if="!isLoggedIn">
+        <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">Log in <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+            <li><a data-ng-click="login('google')">Log in with Google</a></li>
+            <li><a data-ng-click="login('facebook')">Log in with Facebook</a></li>
+        </ul>        
     </li>
-    <li data-ng-hide="isLoggedIn">
-        <button type="button" id="facebook_sign" class="btn btn-primary" data-ng-click="login('facebook')">Sign with Facebook</button>
-    </li>
-    <li data-ng-show="isLoggedIn">
-        <button title="Logout" data-ng-click="logout()" type="button" class="btn btn-primary">{{displayName}}</button>
+    <li class="dropdown" data-ng-if="isLoggedIn">
+
+        <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">{{displayName}} <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+            <li><a data-ng-click="logout()">Logout</a></li>
+        </ul>
     </li>
 </ul>
