--- a/server/client/index.html
+++ b/server/client/index.html
@@ -93,6 +93,24 @@
             </div>
         </div>
 
+        <div class="modal" id="tpLogin">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                        <h4 class="modal-title">Please log in to continue</h4>
+                    </div>
+                    <div class="modal-body">
+                        <button type="button" id="google_sign" class="btn btn-danger" data-ng-click="login('google')">Sign with Google</button>
+                        <button type="button" id="google_sign" class="btn btn-primary" data-ng-click="login('facebook')">Sign with Facebook</button>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
         <script src="libs/hello/dist/hello.all.min.js" type="text/javascript"></script>
         <!-- Bootstrap core JavaScript
@@ -115,13 +133,19 @@
 
         <!--AUTH-->
         <script src="js/auth/auth.js" type="text/javascript"></script>
-        <script src="js/auth/login.js" type="text/javascript"></script>
+        <script src="js/auth/loginDirective.js" type="text/javascript"></script>
         <script src="js/auth/http.js" type="text/javascript"></script>
+        <script src="js/auth/interceptor.js" type="text/javascript"></script>
+
         <!--CORE -->
         <script src="js/core/cache.js" type="text/javascript"></script>
         <script src="js/core/core.js" type="text/javascript"></script>
         <script src="js/core/server.js" type="text/javascript"></script>
-        <script src="js/core/notification.js" type="text/javascript"></script>
+        <script src="js/core/notificationDirective.js" type="text/javascript"></script>
+
+        <!-- SESSION -->
+        <script src="js/session/session.js" type="text/javascript"></script>
+
         <!--PLACE -->
         <script src="js/place/model.js" type="text/javascript"></script>
 
@@ -129,7 +153,7 @@
         <script src="js/trip/handler.js" type="text/javascript"></script>
         <script src="js/trip/http.js" type="text/javascript"></script>
         <script src="js/trip/model.js" type="text/javascript"></script>
-
+        <script src="js/trip/controller.js" type="text/javascript"></script>
         <script src="js/trip/cache.js" type="text/javascript"></script>
         <!--TRIPDAY -->
         <script src="js/tripday/http.js" type="text/javascript"></script>
@@ -147,6 +171,9 @@
 
         <!--LOGGER -->
         <script src="js/logger/src.js" type="text/javascript"></script>
+
+        <!-- HOME -->
+        <script src="js/home/controller.js" type="text/javascript"></script>
 
         <script src="js/controllers.js"></script>
         <script src="js/app.js"></script>
