better color for fb button

--- a/server/client/index.html
+++ b/server/client/index.html
@@ -102,7 +102,7 @@
                     </div>
                     <div class="modal-body">
                         <button type="button" id="google_sign" class="btn btn-danger" data-ng-click="login('google')">Sign with Google</button>
-                        <button type="button" id="google_sign" class="btn btn-primary" data-ng-click="login('facebook')">Sign with Facebook</button>
+                        <button type="button" id="facebook_sign" class="btn btn-primary" data-ng-click="login('facebook')">Sign with Facebook</button>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
