--- a/server/client/index.html
+++ b/server/client/index.html
@@ -93,24 +93,6 @@
             </div>
         </div>
 
-        <div class="modal" id="tpLogin">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        <h4 class="modal-title">Please log in to continue</h4>
-                    </div>
-                    <div class="modal-body">
-                        <button type="button" id="google_sign" class="btn btn-danger" data-ng-click="login('google')">Sign with Google</button>
-                        <button type="button" id="facebook_sign" class="btn btn-primary" data-ng-click="login('facebook')">Sign with Facebook</button>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
 
         <script src="libs/hello/dist/hello.all.min.js" type="text/javascript"></script>
         <!-- Bootstrap core JavaScript
@@ -136,7 +118,7 @@
         <script src="js/auth/loginDirective.js" type="text/javascript"></script>
         <script src="js/auth/http.js" type="text/javascript"></script>
         <script src="js/auth/interceptor.js" type="text/javascript"></script>
-
+        <script src="js/auth/controller.js" type="text/javascript"></script>
         <!--CORE -->
         <script src="js/core/cache.js" type="text/javascript"></script>
         <script src="js/core/core.js" type="text/javascript"></script>
