using ui-route instead of ng-route

--- a/server/client/index.html
+++ b/server/client/index.html
@@ -63,7 +63,7 @@
         </nav>
         <div class="container">
             <tp-notification></tp-notification>
-            <div data-ng-view="">
+            <div ui-view>
 
             </div>
 
@@ -103,7 +103,8 @@
         <script src="libs/bootstrap-material-design/dist/js/material.min.js" type="text/javascript"></script>
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="libs/angular/angular.js" type="text/javascript"></script>
-        <script src="libs/angular-route/angular-route.js" type="text/javascript"></script>
+        <!--<script src="libs/angular-route/angular-route.js" type="text/javascript"></script>-->
+        <script src="libs/angular-ui-router/release/angular-ui-router.min.js" type="text/javascript"></script>
         <script src="libs/angular-animate/angular-animate.min.js" type="text/javascript"></script>
         <script src="libs/angular-ui-bootstrap-bower/ui-bootstrap.min.js" type="text/javascript"></script>
         <script src="libs/angular-ui-bootstrap-bower/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
