--- a/server/client/index.html
+++ b/server/client/index.html
@@ -36,7 +36,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="javascript:void(0)">TripPlanner</a>
+                <a class="navbar-brand" ui-sref="home">TripPlanner</a>
             </div>
             <div class="navbar-collapse collapse navbar-responsive-collapse">
                 <ul class="nav navbar-nav">
