--- a/server/client/index.html
+++ b/server/client/index.html
@@ -146,7 +146,8 @@
         <script src="js/user/cache.js" type="text/javascript"></script>
         <script src="js/user/handler.js" type="text/javascript"></script> 
         <script src="js/user/http.js" type="text/javascript"></script>
-        <script src="js/user/imgDirective.js" type="text/javascript"></script>
+        <script src="js/user/imgDirective.js" type="text/javascript"></script>    
+        <script src="js/user/controller.js" type="text/javascript"></script>
         <!--MAPS -->
         <script src="js/map/maps.js" type="text/javascript"></script>
         <script src="js/map/google_maps.js" type="text/javascript"></script>
