--- a/server/client/js/auth/loginDirective.html
+++ b/server/client/js/auth/loginDirective.html
@@ -10,6 +10,7 @@
 
         <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">{{displayName}} <b class="caret"></b></a>
         <ul class="dropdown-menu">
+            <li><a ui-sref="user({id : userId})">Me</a></li>
             <li><a data-ng-click="logout()">Logout</a></li>
         </ul>
     </li>
