--- a/server/client/index.html
+++ b/server/client/index.html
@@ -101,12 +101,14 @@
         <script src="js/utils.js" type="text/javascript"></script>
 
         <!--AUTH-->
+        <script src="js/auth/src.js" type="text/javascript"></script>
         <script src="js/auth/auth.js" type="text/javascript"></script>
         <script src="js/auth/loginDirective.js" type="text/javascript"></script>
         <script src="js/auth/http.js" type="text/javascript"></script>
         <script src="js/auth/interceptor.js" type="text/javascript"></script>
         <script src="js/auth/controller.js" type="text/javascript"></script>
         <!--CORE -->
+        <script src="js/core/src.js" type="text/javascript"></script>
         <script src="js/core/cache.js" type="text/javascript"></script>
         <script src="js/core/core.js" type="text/javascript"></script>
         <script src="js/core/server.js" type="text/javascript"></script>
@@ -122,17 +124,22 @@
         <script src="js/place/model.js" type="text/javascript"></script>
 
         <!--TRIP -->
+            
+        <script src="js/trip/src.js" type="text/javascript"></script>
         <script src="js/trip/handler.js" type="text/javascript"></script>
         <script src="js/trip/http.js" type="text/javascript"></script>
         <script src="js/trip/model.js" type="text/javascript"></script>
         <script src="js/trip/controller.js" type="text/javascript"></script>
         <script src="js/trip/cache.js" type="text/javascript"></script>
         <!--TRIPDAY -->
+            
+        <script src="js/tripday/src.js" type="text/javascript"></script>
         <script src="js/tripday/http.js" type="text/javascript"></script>
         <script src="js/tripday/model.js" type="text/javascript"></script>
         <script src="js/tripday/cache.js" type="text/javascript"></script>
         <script src="js/tripday/handler.js" type="text/javascript"></script>
         <!--USER -->
+        <script src="js/user/src.js" type="text/javascript"></script>
         <script src="js/user/model.js" type="text/javascript"></script>
         <script src="js/user/cache.js" type="text/javascript"></script>
         <script src="js/user/handler.js" type="text/javascript"></script> 
