--- a/server/client/index.html
+++ b/server/client/index.html
@@ -109,7 +109,7 @@
         <script src="js/auth/controller.js" type="text/javascript"></script>
         <!--CORE -->
         <script src="js/core/src.js" type="text/javascript"></script>
-        <script src="js/core/cache.js" type="text/javascript"></script>
+        <script src="js/core/storage.js" type="text/javascript"></script>
         <script src="js/core/core.js" type="text/javascript"></script>
         <script src="js/core/server.js" type="text/javascript"></script>
         <script src="js/core/notificationDirective.js" type="text/javascript"></script>
