--- a/server/client/index.html
+++ b/server/client/index.html
@@ -110,6 +110,7 @@
         <!--CORE -->
         <script src="js/core/src.js" type="text/javascript"></script>
         <script src="js/core/storage.js" type="text/javascript"></script>
+        <script src="js/core/cacheSpi.js" type="text/javascript"></script>
         <script src="js/core/core.js" type="text/javascript"></script>
         <script src="js/core/server.js" type="text/javascript"></script>
         <script src="js/core/notificationDirective.js" type="text/javascript"></script>
