--- a/server/client/js/core/notificationDirective.html
+++ b/server/client/js/core/notificationDirective.html
@@ -1,4 +1,4 @@
-<div class="alert alert-dismissable alert-{{level}}" data-ng-show="display">
+<div class="alert alert-dismissable alert-{{style}}" data-ng-show="display">
     <button type="button" class="close" data-dismiss="alert">×</button>
     <strong data-ng-bind="title"></strong>&nbsp;<span data-ng-bind="message"></span>
 </div>
