first version of plugins initiation on application start

--- a/server/client/index.html
+++ b/server/client/index.html
@@ -152,6 +152,11 @@
     <!-- HOME -->
     <script src="js/home/controller.js" type="text/javascript"></script>
 
+    <!-- EXTENSIONS -->
+    <script src="js/ext/src.js" type="text/javascript"></script>
+    <script src="js/ext/spi.js" type="text/javascript"></script>
+    <script src="js/ext/handler.js" type="text/javascript"></script>
+    
     <script src="js/controllers.js"></script>
     <script src="js/app.js"></script>
 
