--- a/server/client/js/ext/addDirective.html
+++ b/server/client/js/ext/addDirective.html
@@ -1,9 +1,9 @@
 <div class="btn-group">
-    <a href="bootstrap-elements.html" data-target="#" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
+    <a href="" data-target="#" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
         Add widget
         <span class="caret"></span>
     </a>
-    <ul class="dropdown-menu" data-ng-repeat="ext in extensions track by ext.name">
-        <li><a data-ng-click="goToCreate(ext.name)">{{::ext.displayName}}</a></li>
+    <ul class="dropdown-menu">
+        <li data-ng-repeat="ext in extensions track by ext.name"><a data-ng-click="goToCreate(ext.name)">{{::ext.displayName}}</a></li>
     </ul>
 </div>
