modules declarations moved to extra file

--- a/server/client/index.html
+++ b/server/client/index.html
@@ -100,7 +100,7 @@
         
     <script src="js/shims.js" type="text/javascript"></script>
     <script src="js/utils.js" type="text/javascript"></script>
-
+    <script src="js/modules.js" type="text/javascript"></script>
     <!--AUTH-->
     <script src="js/auth/src.js" type="text/javascript"></script>
     <script src="js/auth/auth.js" type="text/javascript"></script>
