--- a/server/client/index.html
+++ b/server/client/index.html
@@ -164,6 +164,7 @@
     <script src="js/ext/model.js" type="text/javascript"></script>
     <script src="js/ext/proxyDirective.js" type="text/javascript"></script>
     <script src="js/ext/addDirective.js" type="text/javascript"></script>
+    <script src="js/ext/http.js" type="text/javascript"></script>
     <!-- EXT NOTE -->
     
     <script src="js/ext_note/src.js" type="text/javascript"></script>
