--- a/server/client/index.html
+++ b/server/client/index.html
@@ -119,6 +119,7 @@
     <script src="js/core/core.js" type="text/javascript"></script>
     <script src="js/core/server.js" type="text/javascript"></script>
     <script src="js/core/notificationDirective.js" type="text/javascript"></script>
+    <script src="js/core/lzw.js" type="text/javascript"></script>
 
     <!-- DIALOG -->
     <script src="js/dialog/dialog.js" type="text/javascript"></script>
